Fixed: Subscriptions: found some solution to text alignment for TextFlow.

--- a/CPS-Client/src/cps/client/view/application.css
+++ b/CPS-Client/src/cps/client/view/application.css
@@ -33,6 +33,7 @@
     -fx-font-size: 16;
     -fx-font-family: 'Sans-serif';
     -fx-alignment:center;
+    -fx-padding: 50 20 20 20;
 }
 
 .regularButton {
